refactor:使用modernui重新绘制了配置界面的ui
Signed-off-by: shushuwonie <3203818760@qq.com>