@@ -7,11 +7,7 @@ import net.minecraft.entity.LivingEntity;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Text;
-import net.minecraft.util.hit.BlockHitResult;
-import net.minecraft.util.hit.HitResult;
-import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
-import net.minecraft.world.RaycastContext;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -20,8 +16,6 @@ import java.util.Random;
 public final class InjuredBleedingFeature {
     private static final double SYNC_DISTANCE_SQUARED = 96.0D * 96.0D;
     private static final double LANDING_RADIUS = 0.6D;
-    private static final double BALLISTIC_GRAVITY_PER_TICK = -0.04D;
-    private static final int DEFAULT_FADE_TICKS = 120;
 
     private InjuredBleedingFeature() {
     }
@@ -46,21 +40,21 @@ public final class InjuredBleedingFeature {
         Vec3d origin = entity.getPos();
         Vec3d emitter = attackPartPos(entity, random);
         Vec3d emitterOffset = emitter.subtract(origin);
-        int sprayTicks = InjuredBleedingConfig.getInstance().sprayTicks;
+        InjuredBleedingConfig config = InjuredBleedingConfig.getInstance();
+        int sprayTicks = config.sprayTicks;
+        int fadeTicks = Math.max(1, (int) Math.round(config.bloodSpotFadeSeconds * 20.0D));
+        int dropCount = Math.clamp((int) Math.round(config.particlesPerSecond * config.spraySeconds), 1, InjuredBleedingPackets.MAX_DROPS);
 
-        List<InjuredBleedingPackets.BloodDropData> drops = new ArrayList<>(scale.dropCount());
-        for (int i = 0; i < scale.dropCount(); i++) {
-            SurfaceHit landing = randomGroundLanding(world, entity, emitter, random);
-            int flightTicks = estimateFlightTicks(emitter, landing.pos(), random);
+        List<InjuredBleedingPackets.BloodDropData> drops = new ArrayList<>(dropCount);
+        for (int i = 0; i < dropCount; i++) {
+            double angle = random.nextDouble() * Math.PI * 2.0D;
+            double radius = Math.sqrt(random.nextDouble()) * LANDING_RADIUS;
+            int flightTicks = randomRangeInt(random, 4, 18);
             drops.add(new InjuredBleedingPackets.BloodDropData(
-                    landing.pos().x,
-                    landing.pos().y,
-                    landing.pos().z,
-                    (float) landing.normal().x,
-                    (float) landing.normal().y,
-                    (float) landing.normal().z,
+                    (float) angle,
+                    (float) radius,
                     random.nextFloat() * 360.0F,
-                    sprayTicks <= 1 ? 0 : Math.round(i * sprayTicks / (float) Math.max(1, scale.dropCount() - 1)),
+                    randomSprayDelay(random, i, dropCount, config.particlesPerSecond, sprayTicks),
                     flightTicks,
                     random.nextInt()
             ));
@@ -75,7 +69,7 @@ public final class InjuredBleedingFeature {
                 emitterOffset.y,
                 emitterOffset.z,
                 scale.networkId(),
-                DEFAULT_FADE_TICKS,
+                fadeTicks,
                 drops
         );
         for (ServerPlayerEntity player : world.getPlayers()) {
@@ -85,50 +79,13 @@ public final class InjuredBleedingFeature {
         }
     }
 
-    private static SurfaceHit randomGroundLanding(ServerWorld world, LivingEntity entity, Vec3d emitter, Random random) {
-        Vec3d origin = entity.getPos();
-        for (int attempt = 0; attempt < 12; attempt++) {
-            double angle = random.nextDouble() * Math.PI * 2.0D;
-            double radius = Math.sqrt(random.nextDouble()) * LANDING_RADIUS;
-            double x = origin.x + Math.cos(angle) * radius;
-            double z = origin.z + Math.sin(angle) * radius;
-            Vec3d top = new Vec3d(x, entity.getY() + entity.getHeight() + 2.0D, z);
-            Vec3d bottom = new Vec3d(x, entity.getY() - 4.0D, z);
-            HitResult hit = world.raycast(new RaycastContext(
-                    top,
-                    bottom,
-                    RaycastContext.ShapeType.COLLIDER,
-                    RaycastContext.FluidHandling.NONE,
-                    entity
-            ));
-            if (hit instanceof BlockHitResult blockHit && hit.getType() == HitResult.Type.BLOCK && blockHit.getSide() == Direction.UP) {
-                Vec3d pos = blockHit.getPos().add(0.0D, 0.006D, 0.0D);
-                if (pos.y <= emitter.y) {
-                    return new SurfaceHit(pos, new Vec3d(0.0D, 1.0D, 0.0D));
-                }
-            }
-        }
-        return new SurfaceHit(new Vec3d(origin.x, Math.min(entity.getY() + 0.006D, emitter.y), origin.z), new Vec3d(0.0D, 1.0D, 0.0D));
-    }
-
-    private static int estimateFlightTicks(Vec3d start, Vec3d end, Random random) {
-        double horizontal = Math.hypot(end.x - start.x, end.z - start.z);
-        if (horizontal < 0.02D) {
-            return randomRangeInt(random, 6, 12);
-        }
-        double pitch = -Math.toRadians(randomRange(random, 0.0D, 90.0D));
-        double verticalDelta = end.y - start.y;
-        double numerator = 2.0D * (verticalDelta - horizontal * Math.tan(pitch));
-        double ticksSquared = numerator / BALLISTIC_GRAVITY_PER_TICK;
-        if (!Double.isFinite(ticksSquared) || ticksSquared <= 0.0D) {
-            pitch = -Math.toRadians(randomRange(random, 30.0D, 90.0D));
-            numerator = 2.0D * (verticalDelta - horizontal * Math.tan(pitch));
-            ticksSquared = numerator / BALLISTIC_GRAVITY_PER_TICK;
-        }
-        if (!Double.isFinite(ticksSquared) || ticksSquared <= 0.0D) {
-            return randomRangeInt(random, 6, 16);
-        }
-        return Math.clamp((int) Math.round(Math.sqrt(ticksSquared)), 4, 18);
+    private static int randomSprayDelay(Random random, int index, int dropCount, int particlesPerSecond, int sprayTicks) {
+        if (sprayTicks <= 1 || dropCount <= 1) return 0;
+        int bucket = index / Math.max(1, Math.min(particlesPerSecond, dropCount));
+        int bucketStart = Math.min(sprayTicks - 1, bucket * 20);
+        int bucketEnd = Math.min(sprayTicks - 1, bucketStart + 19);
+        if (bucketStart >= bucketEnd) return bucketStart;
+        return bucketStart + random.nextInt(bucketEnd - bucketStart + 1);
     }
 
     private static Vec3d attackPartPos(LivingEntity entity, Random random) {
@@ -147,10 +104,6 @@ public final class InjuredBleedingFeature {
                 entity.getY() + height * yRatio,
                 entity.getZ() + Math.sin(sideAngle) * sideRadius
         );
-    }
-
-    private static double randomRange(Random random, double min, double max) {
-        return min + (max - min) * random.nextDouble();
     }
 
     private static int randomRangeInt(Random random, int min, int max) {
@@ -187,21 +140,18 @@ public final class InjuredBleedingFeature {
         player.sendMessage(Text.literal("\u00a7aInjured bleeding config updated"), true);
     }
 
-    private record SurfaceHit(Vec3d pos, Vec3d normal) {
-    }
-
-    private record Scale(int networkId, int dropCount) {
+    private record Scale(int networkId) {
         private static Scale fromDamagePercent(float damagePercent) {
             if (damagePercent < 0.05F) {
-                return new Scale(0, 8);
+                return new Scale(0);
             }
             if (damagePercent < 0.15F) {
-                return new Scale(1, 16);
+                return new Scale(1);
             }
             if (damagePercent < 0.30F) {
-                return new Scale(2, 28);
+                return new Scale(2);
             }
-            return new Scale(3, 42);
+            return new Scale(3);
         }
     }
 }
